/*****************************************************************************************************************/

//	@author		Michael Roberts <michael@observerly.com>
//	@package	@observerly/nova/proto/solve/v1
//	@license	Copyright Â© 2021-2025 observerly

/*****************************************************************************************************************/

syntax = "proto3";

/*****************************************************************************************************************/

package solve.v1;

/*****************************************************************************************************************/

// Import the wcs.proto definitions
import "wcs/v1/wcs.proto";

/*****************************************************************************************************************/

message SolveForWCSFITSHandlerRequest {
  string owner = 1;
  string bucket_name = 2;
  string location = 3;
}

/*****************************************************************************************************************/

message SolveForWCSFITSHandlerResponse {
  wcs.v1.WCS wcs = 1;
}

/*****************************************************************************************************************/

service SolveService {
  rpc SolveForWCSFITSHandler(SolveForWCSFITSHandlerRequest) returns (SolveForWCSFITSHandlerResponse) {}
}

/*****************************************************************************************************************/